@@ -1,5 +1,13 @@
 2015-10-16  Mark Wielaard  <mjw@redhat.com>
 
+	* readelf.c (argp_option): Describe --decompress,-z.
+	(print_decompress): New bool.
+	(parse_opt): Handle -z.
+	(elf_ch_type_name): New function.
+	(print_shdr): Print section compress information.
+
+2015-10-16  Mark Wielaard  <mjw@redhat.com>
+
 	* Makefile.am [BUILD_STATIC](libdw): Add -lz.
 	[BUILD_STATIC](libelf): Likewise.
 
